ChangeLog
=========
0.2.0dev
    * Improve automatic thumbnail and preview selection

0.1.0
    * Initial release